fix(accessibility): background and foreground colors do not have a sufficient contrast ratio

--- a/src/style/variables/color.scss
+++ b/src/style/variables/color.scss
@@ -1,5 +1,5 @@
 $color-black: #262626;
-$color-grey: #9da4c3;
+$color-grey: #6a739c;
 $color-blue: #0366d6;
 
 
